# magicmapmansion

./: CMakeLists.txt  LICENSE.txt  compiler_test_linux  compiler_test_windows.cpp  description_sketch.md  introcanvas.txt  mansion.txt  mansion_english.txt  mapSketch.txt  readme.html  readme.md  sketch.txt  skripler_test_on_linux
include/: Room.hpp  Skripler.hpp  Texture.hpp  Tile.hpp  skripler.hpp  textTools.hpp
src/: CMakeLists.txt  Room.cpp  Texture.cpp  Tile.cpp  main.cpp  skripler.cpp  skripler_test_on_windows.cpp  skripler_windows.cpp  textTools.cpp
textures/: hidden.txt  map_scale.txt  stairdown.txt  stairup.txt  win_message.txt
